--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,19 +1,17 @@
-<div class="conatainer">
-<app-navbar>
+<!-- <div class="container"> -->
+<app-navbar></app-navbar>
 
-</app-navbar>
-
-<!-- Router Container -->
+ <!-- Router Container -->
 <div class="router-container">
 <router-outlet>
 
 </router-outlet>
-</div>
+</div> -->
 <!-- Footer -->
 
 <div class="footer-container">
   <app-footer>
-    
+
   </app-footer>
 </div>
-</div>
+<!-- </div> -->
