--- a/src/app/component/navbar/navbar.component.html
+++ b/src/app/component/navbar/navbar.component.html
@@ -11,7 +11,7 @@
           </a>
         </li>
         <li class="nav-item mt-2">
-          <a class="nav-link" href="#"><button class="btn btn-outline-primary btn-navbar">Admin
+          <a class="nav-link" routerLink="/admin"><button class="btn btn-outline-primary btn-navbar">Admin
             <fa-icon [icon]="['fas', '']" size="sm" class="Admin"></fa-icon>
         </button></a>
         </li>
