--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -7,14 +7,14 @@
 
 <div id="carouselSlides" class="carousel slide" data-ride="carousel">
   <div class="carousel-inner">
-    <div class="carousel-item active">
-        <img src="./../../assets/images/fxslide1.jpg" class="d-block w-100" alt="...">
+    <div class="carousel-item active" data-interval=10000>
+        <img src="./../../assets/images/fxslide1.jpg" class="d-block w-100" alt="Carousel1">
     </div>
-    <div class="carousel-item">
-      <img src="./../../assets/images/mechanic.jpg" class="d-block w-100" alt="...">
+    <div class="carousel-item" data-interval=10000>
+      <img src="./../../assets/images/mechanic.jpg" class="d-block w-100" alt="Carousel2">
     </div>
-    <div class="carousel-item">
-      <img src="./../../assets/images/cars.jpg" class="d-block w-100" alt="...">
+    <div class="carousel-item" data-interval=10000>
+      <img src="./../../assets/images/cars.jpg" class="d-block w-100" alt="Carousel3">
     </div>
   </div>
 </div>
