--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -1,4 +1,4 @@
-.carousel-item {
+.carousel-slide {
   height: fit-content;
   width: fit-content;
 }
@@ -6,6 +6,7 @@
 .jumbotron {
   background-color: rgb(125, 203, 230);
   font-family: fantasy;
+  height: fit-content;
 }
 
 
