--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -5,16 +5,22 @@
   </div>
 </div>
 
-<div id="carouselSlides" class="carousel slide" data-ride="carousel">
-  <div class="carousel-inner">
-    <div class="carousel-item active" data-interval=10000>
-        <img src="./../../assets/images/fxslide1.jpg" class="d-block w-100" alt="Carousel1">
-    </div>
-    <div class="carousel-item" data-interval=10000>
-      <img src="./../../assets/images/mechanic.jpg" class="d-block w-100" alt="Carousel2">
-    </div>
-    <div class="carousel-item" data-interval=10000>
-      <img src="./../../assets/images/cars.jpg" class="d-block w-100" alt="Carousel3">
-    </div>
-  </div>
+<div>
+  <img src="./../../assets/images/fxslide1.jpg" class="cover" alt="CoverPic">
 </div>
+    <!-- <div id="carouselSlides" class="carousel slide" data-ride="carousel" data-interval="2000">
+      <div class="carousel-inner">
+        <div class="carousel-item active" data-slide="next">
+            <img src="./../../assets/images/fxslide1.jpg" class="d-block w-100" alt="Carousel1">
+        </div>
+        <div class="carousel-item">
+          <img src="./../../assets/images/mechanic.jpg" class="d-block w-100" alt="Carousel2">
+       </div>
+       <div class="carousel-item">
+         <img src="./../../assets/images/cars.jpg" class="d-block w-100" alt="Carousel3">
+       </div>
+     </div> -->
+
+
+
+
