--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -1,12 +1,13 @@
-.carousel-slide {
-  height: fit-content;
-  width: fit-content;
+.cover {
+  max-width: 100%;
+  max-height: 100%;
 }
 
 .jumbotron {
   background-color: rgb(125, 203, 230);
   font-family: fantasy;
   height: fit-content;
+  margin-bottom: 0%;
 }
 
 
