--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,7 +1,7 @@
 <div class="jumbotron jumbotron-fluid">
   <div class="container">
-    <h1 class="display-4">AutoLink Inventory System</h1>
-    <p class="lead">The premiere Inventory management system, specifically tailored with your dealership in mind.</p>
+    <h1 class="display-4">Hive Inventory System</h1>
+    <p class="lead">The premiere Inventory management system, specifically tailored with your dealership chain in mind.</p>
   </div>
 </div>
 
