--- a/src/app/component/navbar/navbar.component.scss
+++ b/src/app/component/navbar/navbar.component.scss
@@ -1,6 +1,6 @@
 .navbar {
   height: 85px;
-  background: rgb(127, 219, 255) 0% 0% no-repeat padding-box;
+  background: rgb(255, 202, 24) 0% 0% no-repeat padding-box;
   box-shadow: 0px 3px 19px #00000041;
 }
 
@@ -15,6 +15,8 @@
   font-weight: bolder;
   font-style: italic;
   font-size: xx-large;
+  font-family: 'Arial Narrow', Arial, sans-serif;
+  text-decoration: underline black;
 }
 
 
