--- a/src/app/vehicles/vehicles.component.html
+++ b/src/app/vehicles/vehicles.component.html
@@ -3,7 +3,7 @@
   <h3> <span class="title">{{vehicle.year}} {{vehicle.make}} {{vehicle.model}}</span> Details</h3>
   <div class="condition"><span>Condition: {{vehicle.condition | uppercase}}</span></div>
   <div class="miles"><span>Mileage: {{vehicle.mileage}} miles</span></div>
-  <div class="scheduled"><span>Scheduled Service: {{vehicle.service_scheduled}}</span>
+  <div class="scheduled"><span>Scheduled Service: {{vehicle.serviceScheduled}}</span>
   </div>
   <div>
     <button class="scheduler"> Schedule Service </button>
