--- a/src/app/component/footer/footer.component.html
+++ b/src/app/component/footer/footer.component.html
@@ -1,7 +1,7 @@
 <footer class="footer pt-5 pb-5">
     <div class="row">
         <div class="col-12 text-center">
-            <p class="pb-0 mb-0 mt-4">Copyright 2020 AutoLink</p>
+            <p class="pb-0 mb-0 mt-4">Copyright 2020 Hive</p>
             <p>For entertainment purposes only.</p>
         </div>
 
