--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -5,10 +5,10 @@
   </div>
 </div>
 
-<div>
+<!-- <div>
   <img src="./../../assets/images/fxslide1.jpg" class="cover" alt="CoverPic">
-</div>
-    <!-- <div id="carouselSlides" class="carousel slide" data-ride="carousel" data-interval="2000">
+</div> -->
+    <div id="carouselSlides" class="carousel slide" data-ride="carousel" data-interval="4500">
       <div class="carousel-inner">
         <div class="carousel-item active" data-slide="next">
             <img src="./../../assets/images/fxslide1.jpg" class="d-block w-100" alt="Carousel1">
@@ -19,7 +19,7 @@
        <div class="carousel-item">
          <img src="./../../assets/images/cars.jpg" class="d-block w-100" alt="Carousel3">
        </div>
-     </div> -->
+     </div>
 
 
 
