--- a/src/app/signup/signup.component.html
+++ b/src/app/signup/signup.component.html
@@ -27,12 +27,22 @@
         </div>
       </div>
       <div class="form-group">
-        <label class="label">Nickname</label>
-        <input [ngClass]="{'is-invalid': hasError && form.get('nickName').errors}" class="form-control" type="text"
-          formControlName="nickName" placeholder="Doe">
-        <label class="form-error" *ngIf="hasError && form.get('nickName').errors">
-          <span class="text-danger" *ngIf="form.get('nickName').errors['required']">
-            Nickname is required!
+        <label class="label">Username</label>
+        <input [ngClass]="{'is-invalid': hasError && form.get('userName').errors}" class="form-control" type="text"
+          formControlName="userName" placeholder="Username">
+        <label class="form-error" *ngIf="hasError && form.get('userName').errors">
+          <span class="text-danger" *ngIf="form.get('userName').errors['required']">
+            Username is required!
+          </span>
+        </label>
+      </div>
+      <div class="form-group">
+        <label class="label">Dealership Location</label>
+        <input [ngClass]="{'is-invalid': hasError && form.get('location').errors}" class="form-control" type="text"
+          formControlName="location" placeholder="Location">
+        <label class="form-error" *ngIf="hasError && form.get('location').errors">
+          <span class="text-danger" *ngIf="form.get('location').errors['required']">
+            Dealership Location is required!
           </span>
         </label>
       </div>
