--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -10,4 +10,20 @@
   margin-bottom: 0%;
 }
 
+.card {
+  width: 25em;
+  box-shadow: 0px 3px 19px #00000041;
+}
+
+.container {
+  display: grid;
+  grid-template-rows: 1fr 1fr 1fr;
+  grid-template-columns: 1fr 1fr 1fr;
+  margin-top: 50px;
+  margin-left: 60px;
+}
+
+.card-body{
+ text-align: center;
+}
 
