--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -37,3 +37,11 @@
         </form>
   </div>
 </div>
+
+<div>
+  Temporary Login for testing:
+  <br>
+  Username: Mrevans
+  <br>
+  Password: password123
+</div>
