--- a/src/app/component/navbar/navbar.component.html
+++ b/src/app/component/navbar/navbar.component.html
@@ -1,4 +1,4 @@
-<!-- <nav *ngIf="currentUser && router.isActive('/home', true)"  class="navbar navbar-expand">
+<nav *ngIf="!currentUser && router.isActive('/home', true)"  class="navbar navbar-expand">
   <img src="./../../assets/images/Buzzle.png" alt="logo" width="80px" height="80px" [routerLink]="['/home']">
   <a class="navbar-brand" [routerLink]="['/home']">Hive</a>
 
@@ -13,9 +13,9 @@
 
     </ul>
   </div>
-</nav> -->
+</nav>
 
-<nav class="navbar navbar-expand">
+<nav *ngIf="currentUser && router.isActive('/home', true)" class="navbar navbar-expand">
   <img src="./../../assets/images/Buzzle.png" alt="logo" width="80px" height="80px" [routerLink]="['/home']">
   <a class="navbar-brand" [routerLink]="['/home']">Hive</a>
 
@@ -23,8 +23,7 @@
     <ul class="navbar-nav ml-auto">
       <li class="nav-item active mt-2 d-none d-md-block">
         <a class="nav-link text-uppercase">
-          Hello!
-            <!-- Hi, {{currentUser.username}}! -->
+           Hi, {{currentUser.username}}!
         </a>
     </li>
     <li class="nav-item mt-3 dropdown">
@@ -36,6 +35,7 @@
         <a class="dropdown-item" href="#">Service</a>
         <a class="dropdown-item" href="#">Appointments</a>
         <a class="dropdown-item" href="#">Profile</a>
+        <a class="dropdown-item" (click)="logoutUser()">Logout</a>
       </div>
     </li>
 
@@ -43,7 +43,7 @@
   </div>
 </nav>
 
-<!-- <nav *ngIf="router.isActive('/login', true)"  class="navbar navbar-expand">
+<nav *ngIf="router.isActive('/login', true)"  class="navbar navbar-expand">
   <img src="./../../assets/images/Buzzle.png" alt="logo" width="80px" height="80px" [routerLink]="['/home']">
   <a class="navbar-brand" [routerLink]="['/home']">Hive</a>
 
@@ -57,9 +57,9 @@
         </a>
     </ul>
   </div>
-</nav> -->
+</nav>
 
-<!-- <nav *ngIf="router.isActive('/inventory', true)"  class="navbar navbar-expand">
+<nav *ngIf="router.isActive('/inventory', true)"  class="navbar navbar-expand">
   <img src="./../../assets/images/Buzzle.png" alt="logo" width="80px" height="80px" [routerLink]="['/home']">
   <a class="navbar-brand" [routerLink]="['/home']">Hive</a>
 
@@ -73,7 +73,7 @@
         </a>
     </ul>
   </div>
-</nav> -->
+</nav>
 
 
 
