--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,15 +1,15 @@
-<!-- <div class="jumbotron jumbotron-fluid">
-  <div class="container">
-    <h1 class="display-4">Hive Inventory System</h1>
-    <p class="lead">The premiere Inventory management system, specifically tailored with your dealership chain in mind.</p>
-  </div>
-</div>
-
-<div id="carouselSlides" class="carousel slide" data-ride="carousel" data-interval="4500">
-  <div class="carousel-inner">
-    <div class="carousel-item active" data-slide="next">
-        <img src="./../../assets/images/fxslide1.jpg" class="d-block w-100" alt="Carousel1">
+<div *ngIf="!currentUser">
+  <div class="jumbotron jumbotron-fluid">
+    <div class="container">
+      <h1 class="display-4">Hive Inventory System</h1>
+      <p class="lead">The premiere Inventory management system, specifically tailored with your dealership chain in mind.</p>
     </div>
+  </div>
+  <div id="carouselSlides" class="carousel slide" data-ride="carousel" data-interval="4500">
+    <div class="carousel-inner">
+      <div class="carousel-item active" data-slide="next">
+        <img src="./../../assets/images/fxslide1.jpg" class="d-block w-100" alt="Carousel1">
+      </div>
     <div class="carousel-item">
       <img src="./../../assets/images/mechanic.jpg" class="d-block w-100" alt="Carousel2">
     </div>
@@ -17,9 +17,11 @@
       <img src="./../../assets/images/cars.jpg" class="d-block w-100" alt="Carousel3">
     </div>
   </div>
-</div> -->
+  </div>
+</div>
 
-<div class="row row-cols-1 row-cols-md-2 container">
+
+<div *ngIf="currentUser" class="row row-cols-1 row-cols-md-2 container">
   <div class="col mb-4">
     <div class="card">
       <div class="card-body">
@@ -127,3 +129,4 @@
     </div>
   </div>
 </div>
+
