temp disabled single vehicles, until fix is found

--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -6,7 +6,7 @@
 .jumbotron {
   background-color: rgb(255, 202, 24);
   font-family: fantasy;
-  height: fit-content;
+  height: 400px;
   margin-bottom: 0%;
 }
 
